# fosdem

./: .gitattributes  .gitignore  default.nix  flake.nix  meson.build  nxc.json  readme.md
.github/workflows/: pages.yaml
doc/: cycle.drawio  default.nix  flow.drawio  fosdem.typ
include/helper/: bits.bpf.h  maps.bpf.h
src/: main.bpf.c  main.yaml
test/: collector.nix  default.nix  exporter.nix  kernel.nix
